# fastapi-blog

./: 404.html  Dockerfile  LICENSE.md  Makefile  README.md  changelog.md  index.html  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: contributing.yml  docs.yml  latest-changes.yml  test.yml
src/: views.py
src/fastapi_blog/: __init__.py  feeds.py  helpers.py  main.py  router.py  routers.py
src/fastapi_blog/templates/: index.html  page.html  post.html  posts.html  tags.html
src/fastapi_blog/templates/layout/: base.html
src/fastapi_blog/templates/partials/: _post_short.html
tests/: test_helpers.py  test_router.py  test_views.py
tests/example/: main.py  prefix_change.py
tests/example/posts/: 2023-06-bjj-training-tips.md
tests/example/static/: custom.css
tests/example/templates/: 404.html  page.html  tag.html  tags.html
tests/example/templates/layout/: base.html
tests/examples/: defaults.py  favorite_post_ids.py  modified_all.py  prefix_change.py  prefix_none.py
tests/examples/examples/: main.py
tests/examples/pages/: about.md
tests/examples/posts/: 2023-08-pypi-project-urls-cheatsheet.md  no-tags.md
tests/examples/templates/layout/: base.html
