[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-blog"
version = "0.3.0"
description = "Blogging for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"},
]
maintainers = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",  
  "Framework :: FastAPI",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",  
]
license = {text = "GNU General Public License v3"}
dependencies = [
  "fastapi>=0.109.2",
  "feedgen>=1.0.0",  
  "jinja2>=3.1.3",
  "jinja2-time>=0.2.0",
  "markdown>=3.5.2",  
  "pyyaml>=6.0.1",
  "pymdown-extensions>=10.7",
  "uvicorn>=0.27.1",  
]

[project.optional-dependencies]
dev = [
  "ruff==0.2.2",
  "pytest==8.0.1",
  "coverage==7.4.1",
  "mypy==1.8.0",
  "types-Markdown==3.5.0.20240129",
  "types-PyYAML==6.0.12.12",
]

[project.urls]

bugs = "https://github.com/pydanny/fastapi-blog/issues"
changelog = "https://github.com/pydanny/fastapi-blog/blob/master/CHANGELOG.md"
homepage = "https://github.com/pydanny/fastapi-blog"

[tool.setuptools]
package-dir = {"" = "src"}


# Mypy
# ----

[tool.mypy]
files = "."
exclude = [
  "tests/*"
]

# Use strict defaults
# strict = true
# warn_unreachable = true
# warn_no_return = true



# Ruff
# ----

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
lint.ignore = [
    "E501",  # line too long - black takes care of this for us
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__ files as these are convenience imports
"**/__init__.py" = [ "F401" ]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "project",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"project" = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20


[tool.coverage.run]
source = ["src"]
